LabkitLoaderCmd: Improve multichannel image support